<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView8"
        style="@style/titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CPAChoosePosiTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/CPARadioGroupPositions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <RadioButton
            android:id="@+id/CPARadioButtonProgrammer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CPAProgrammer" />

        <RadioButton
            android:id="@+id/CPARadioButtonManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CPAManager" />

        <RadioButton
            android:id="@+id/CPARadioButtonSalesPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CPASalesPerson" />
    </RadioGroup>

    <Button
        android:id="@+id/CPAButtonSavePosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/CPASavePosiButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CPARadioGroupPositions" />

</androidx.constraintlayout.widget.ConstraintLayout>