<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        style="@style/textViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UEAEmailTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/textViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UEALastTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UEAFirstTitle"
        style="@style/textViews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        style="@style/textViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UEADepartmentTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        style="@style/textViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/UEAPositionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UEAButtonChooseDept" />

    <EditText
        android:id="@+id/UEAEditTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:ems="10"
        style="@style/editTexts"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/UEAEditTextDepartment"
        app:layout_constraintTop_toTopOf="parent" />
    <!--        android:enabled="false"
    android:inputType="none"-->
    <EditText
        android:id="@+id/UEAEditTextFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        style="@style/editTexts"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/UEAEditTextDepartment"
        app:layout_constraintTop_toBottomOf="@+id/UEAEditTextEmail" />

    <EditText
        android:id="@+id/UEAEditTextPosition"
        style="@style/editTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/UEAEditTextDepartment"
        app:layout_constraintTop_toBottomOf="@+id/UEAButtonChooseDept" />

    <EditText
        android:id="@+id/UEAEditTextDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        style="@style/editTexts"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/UEAEditTextLast" />

    <EditText
        android:id="@+id/UEAEditTextLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        style="@style/editTexts"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/UEAEditTextDepartment"
        app:layout_constraintTop_toBottomOf="@+id/UEAEditTextFirst" />

    <Button
        android:id="@+id/UEAButtonSaveEmployee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/UEASaveEmpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UEAButtonChoosePosition" />

    <Button
        android:id="@+id/UEAButtonChoosePosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/UEAChoosePositionButton"
        app:layout_constraintEnd_toEndOf="@+id/UEAEditTextPosition"
        app:layout_constraintStart_toStartOf="@+id/UEAEditTextPosition"
        app:layout_constraintTop_toBottomOf="@+id/UEAEditTextPosition" />

    <Button
        android:id="@+id/UEAButtonChooseDept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/UEAChooseDeptButton"
        app:layout_constraintEnd_toEndOf="@+id/UEAEditTextDepartment"
        app:layout_constraintStart_toStartOf="@+id/UEAEditTextDepartment"
        app:layout_constraintTop_toBottomOf="@+id/UEAEditTextDepartment" />

</androidx.constraintlayout.widget.ConstraintLayout>